# aws-north-project

./: README.md  taskfile.yml
.github/workflows/: dev.yml
diagrammer/: diagram.py  pyproject.toml
terraform/: .gitignore  .terraform.lock.hcl  main.tf  provider.tf  terraform.tfvars  variables.tf
terraform/environments/dev/: main.tf  output.tf  variables.tf
terraform/modules/apigateway/: iam.tf  main.tf  variables.tf
terraform/modules/apigateway/gateway_resources/: main.tf  variables.tf
terraform/modules/cognito/: main.tf  output.tf  variables.tf
terraform/modules/db/: main.tf  output.tf  variables.tf
terraform/modules/db/clusters/: main.tf  output.tf  variables.tf
terraform/modules/fargate/: ecr.tf  ecs.tf  iam.tf  main.tf  output.tf  variables.tf
terraform/modules/fargate/services/: ecr.tf  ecs.tf  output.tf  variables.tf
terraform/modules/firehose/: iam.tf  main.tf  variables.tf
terraform/modules/kms/: main.tf  variables.tf
terraform/modules/lambda/: msk_producer.tf  output.tf  variables.tf
terraform/modules/lambda/msk-lambda-producer/: .gitignore  package-lock.json  package.json  tsconfig.json
terraform/modules/lambda/msk-lambda-producer/src/: index.ts
terraform/modules/lb/: acm.tf  lb.tf  outputs.tf  route53.tf  s3.tf  security.tf  variables.tf
terraform/modules/msk/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: gateway.tf  outputs.tf  route53.tf  route_table.tf  security.tf  subnet.tf  variables.tf  vpc.tf
terraform/modules/storage/: main.tf  outputs.tf
