[tool.poetry]
name = "diagrammer"
version = "0.1.0"
description = "Diagram Tool"
authors = ["Ahmad Ragab <averroes2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
diagrams = "^0.23.4"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
